--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <form [formGroup]="uploadForm" (ngSubmit)="upload()">
 
   <div class="preview" *ngIf="imgFile">
@@ -19,20 +20,17 @@
       <div *ngIf="uf.file.errors?.required">Image file is required.</div>
     </div>
   </div>
-
-
-  
   <br><br>
-
-
-
   <button class="btn btn-primary" type="submit">Upload File</button>
 
 </form>
-<br><br>
+
+
+<br>
 <div>
   <h5>{{ocrResult}}</h5>
   <h5>{{username}}</h5>
   <h5>{{userbirthdate}}</h5>
   <h5>{{userid}}</h5>
 </div>
+<canvas id="canvas" width ="1000" height = "800"></canvas>
